<resources>
    <string name="app_name">ADLMIDI Player</string>
    <string name="open">Open</string>
    <string name="playpause">Play/Pause</string>
    <string name="quit">Quit</string>
    <string name="bankNo">Music bank</string>
    <string name="htremolo">Deep Tremolo</string>
    <string name="hvibrato">Deep Vibrato</string>
    <string name="scalemod">Scalable modulation</string>
    <string name="numChips">Number of emulated chips</string>
    <string name="num4opChans">Total number of 4-op channels</string>
    <string name="restart">Restart</string>
    <string name="volumesModel">Volume ranges model</string>
    <string name="vrmAuto">[Auto]</string>
    <string name="vrmGeneric">Generic</string>
    <string name="vrmCMF">OPL3 Native</string>
    <string name="vrmDMX">DMX</string>
    <string name="vrmApogee">Apogee</string>
    <string name="vrm9x">9X</string>
    <string name="chooseBank">Choose custom bank</string>
    <string name="useCustom">Use custom</string>
    <string name="bank_file_empty"><![CDATA[<Bank File>]]></string>
    <string name="sign_minus" translatable="false">-</string>
    <string name="sign_plus" translatable="false">+</string>
    <string name="full_panning_stereo">Full-panning stereo</string>
    <string name="no_files_loaded"><![CDATA[<No files loaded>]]></string>
    <string name="gain_factor">Gain factor</string>
    <string name="sign_plusplus" translatable="false">++</string>
    <string name="sign_minusminus" translatable="false">--</string>
    <string name="run_at_pcm_rate">Run at PCM Rate (Reduce CPU usage)</string>
    <string name="emulatorType">OPL3 Emulator</string>
    <string name="noCustomBankLabel"><![CDATA[<No custom bank>]]></string>
    <string name="autoArpeggio">Auto Arpeggio</string>
    <string name="chanAllocationMode">Channel allocation mode</string>
    <string name="managePermExplainTitle">All files access permission is required</string>
    <string name="managePermExplainText">Currently, this application can\'t properly work via modern APIs because it requires an access to non-standard file types such as bank formats or non-typical music files were never recognised as \"document\" or a \"media file\". Therefore, on Android 11+ this application needs a file system permission.</string>
</resources>
