<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_player"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.wohlsoft.adlmidiplayer.Player">

    <RelativeLayout
        android:id="@+id/activity_playerZ"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/sample_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="Hello World!" />

        <Button
            android:id="@+id/openFile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sample_text"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:text="@string/open"
            tools:text="@string/open" />

        <Button
            android:id="@+id/playPause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sample_text"
            android:layout_toEndOf="@+id/openFile"
            android:layout_toRightOf="@+id/openFile"
            android:text="@string/playpause"
            tools:text="@string/playpause" />

        <Button
            android:id="@+id/restart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sample_text"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_toEndOf="@+id/playPause"
            android:layout_toRightOf="@+id/playPause"
            android:text="@string/restart"
            tools:text="@string/restart" />

        <CheckBox
            android:id="@+id/deepTremolo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/openFile"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="24dp"
            android:layout_toStartOf="@+id/restart"
            android:layout_toLeftOf="@+id/restart"
            android:text="@string/htremolo"
            tools:text="@string/htremolo" />

        <CheckBox
            android:id="@+id/deepVibrato"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/deepTremolo"
            android:layout_alignEnd="@+id/deepTremolo"
            android:layout_alignRight="@+id/deepTremolo"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:text="@string/hvibrato"
            tools:text="@string/hvibrato" />

        <CheckBox
            android:id="@+id/scalableModulation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/deepVibrato"
            android:layout_alignEnd="@+id/deepVibrato"
            android:layout_alignRight="@+id/deepVibrato"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:text="@string/scalemod"
            tools:text="@string/scalemod" />

        <CheckBox
            android:id="@+id/adlibDrumsMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/scalableModulation"
            android:layout_alignEnd="@+id/scalableModulation"
            android:layout_alignRight="@+id/scalableModulation"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:text="@string/adlibdrums"
            tools:text="@string/adlibdrums" />

        <TextView
            android:id="@+id/volumeRangesModelLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/adlibDrumsMode"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="@string/volumesModel"
            tools:text="@string/volumesModel" />

        <Spinner
            android:id="@+id/volumeRangesModel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/volumeRangesModelLabel"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true" />

        <TextView
            android:id="@+id/musicBankLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/volumeRangesModel"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="@string/bankNo"
            tools:text="@string/bankNo" />

        <Spinner
            android:id="@+id/bankNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/musicBankLabel"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true" />

        <Button
            android:id="@+id/customBank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bankNo"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:text="@string/chooseBank" />

        <CheckBox
            android:id="@+id/useCustom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/customBank"
            android:layout_alignBottom="@+id/customBank"
            android:layout_toEndOf="@+id/customBank"
            android:layout_toRightOf="@+id/customBank"
            android:text="@string/useCustom" />

        <TextView
            android:id="@+id/bankFileName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/customBank"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:text="@string/bank_file_empty" />

        <SeekBar
            android:id="@+id/musPos"
            style="@style/Widget.AppCompat.SeekBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bankFileName"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:max="100"
            android:progress="0" />

        <android.support.constraint.ConstraintLayout
            android:layout_width="368dp"
            android:layout_height="272dp"
            android:layout_below="@+id/musPos"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="false"
            android:layout_marginStart="0dp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="34dp">

            <Button
                android:id="@+id/num4opChansMinus"
                android:layout_width="42dp"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:text="-"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <EditText
                android:id="@+id/num4opChans"
                android:layout_width="70dp"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:inputType="number|numberSigned"
                app:layout_constraintStart_toEndOf="@+id/numChipsMinus"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <Button
                android:id="@+id/num4opChansPlus"
                android:layout_width="42dp"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:text="+"
                app:layout_constraintStart_toEndOf="@+id/numChips"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/numChips"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/numChipsMinus"
                android:layout_width="42dp"
                android:layout_height="48dp"
                android:text="-"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <Button
                android:id="@+id/numChipsPlus"
                android:layout_width="42dp"
                android:layout_height="48dp"
                android:text="+"
                app:layout_constraintStart_toEndOf="@+id/numChips"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <EditText
                android:id="@+id/numChips"
                android:layout_width="70dp"
                android:layout_height="48dp"
                android:ems="10"
                android:inputType="number"
                app:layout_constraintStart_toEndOf="@+id/numChipsMinus"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="18dp"
                android:text="@string/num4opChans"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/numChipsMinus" />

            <TextView
                android:id="@+id/numChipsCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="17dp"
                android:text="TextView"
                app:layout_constraintStart_toEndOf="@+id/numChipsPlus"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <TextView
                android:id="@+id/num4opChansCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="22dp"
                android:text="TextView"
                app:layout_constraintStart_toEndOf="@+id/num4opChansPlus"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <Button
                android:id="@+id/quitapp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quit"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </android.support.constraint.ConstraintLayout>


    </RelativeLayout>
</ScrollView>

